23_architectures/arc3/kubernetes/istio/prometheus-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: prometheus-observability-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - prometheus.istio-system.192.168.50.240.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-gw-virtualservice
  namespace: istio-system
spec:
  hosts:
    - prometheus.istio-system.192.168.50.240.nip.io
  gateways:
    - prometheus-observability-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus
