23_architectures/arc3/kubernetes/istio/zipkin-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tracing-observability-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - tracing.istio-system.192.168.50.240.nip.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing-gw-virtualservice
  namespace: istio-system
spec:
  hosts:
    - tracing.istio-system.192.168.50.240.nip.io
  gateways:
    - tracing-observability-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: tracing
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tracing
  namespace: istio-system
spec:
  host: tracing
  trafficPolicy:
    tls:
      mode: DISABLE
---
